Web page upload

--- a/about.html
+++ b/about.html
@@ -43,57 +43,40 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="#works">Works</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li class="active"><a href="about.html">About</a></li>
+            <li><a href="index.html#works">Works</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </div>
 
 
-	<div id="headerwrap">
+	<div id="aboutwrap">
 	    <div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
-					<h4>HELLO PEOPLE, MY NAME IS</h4>
-					<h1>ANTONIO MIN</h1>
-					<h4>SOFTWARE DEVELOPER</h4>
 				</div>
 			</div><! --/row -->
 	    </div> <!-- /container -->
-	</div><! --/headerwrap -->
+	</div><! --/aboutwrap -->
 
-	<section id="works"></section>
 	<div class="container">
 		<div class="row centered mt mb">
-			<h1>My Projects</h1>
+			<div class="col-lg-8 col-lg-offset-2">
+				<h2>ANTONIO MIN</h2>
+				<p>한글 이름, 민병윤. 중학생 때부터 시작한 프로그래머가 되겠다는 꿈. 사람들에게 편리를 주는 소프트웨어를 만들자. 어떤 것이 있으면 좋을까. 나는 어떤 것이 불편한가. </p>
+				<p>영감. 정의. 설계. 구현. Build up new software.</p>
+				<p>상상을 현실로 구현하는 재미. Software development</p>
+			</div>
 
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work_howlong.html"><img src="assets/img/portfolio/folio01.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work_codestorage.html"><img src="assets/img/portfolio/folio02.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="#"><img src="assets/img/portfolio/folio03.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="#"><img src="assets/img/portfolio/folio04.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="#"><img src="assets/img/portfolio/folio05.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="#"><img src="assets/img/portfolio/folio06.png" class="img-responsive"></a>
-			</div>
 		</div><! --/row -->
 	</div><! --/container -->
 
 	<div id="social">
 		<div class="container">
 			<div class="row centered">
-				<div class="col-lg-12">
+        <div class="col-lg-12">
 					<a href="https://github.com/AntonioMIN"><i class="fa fa-github"></i></a>
 				</div>
 			</div><! --/row -->
@@ -103,7 +86,7 @@
 	<div id="footerwrap">
 		<div class="container">
 			<div class="row centered">
-				<div class="col-lg-4">
+        <div class="col-lg-4">
 					<p><b>SOFTWARE DEVELOPER</b></p>
 				</div>
 				<div class="col-lg-4">
