--- a/work.html
+++ b/work.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>Antonio Min</title>
+    <title>INSTANT - Bootstrap Theme</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -39,7 +39,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">ANTONIOMIN</a>
+          <a class="navbar-brand" href="index.html">INSTANT</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -52,50 +52,56 @@
     </div>
 
 
-	<div id="headerwrap">
+	<div id="workwrap">
 	    <div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
-					<h4>HELLO PEOPLE, MY NAME IS</h4>
-					<h1>ANTONIO MIN</h1>
-					<h4>SOFTWARE DEVELOPER</h4>
+					<h4>NEW WEBSITE FOR</h4>
+					<h1>INSTANT</h1>
+					<h4>ROLE: LEAD DESIGNER</h4>
 				</div>
 			</div><! --/row -->
 	    </div> <!-- /container -->
-	</div><! --/headerwrap -->
-
+	</div><! --/workwrap -->
+	
 	<section id="works"></section>
 	<div class="container">
 		<div class="row centered mt mb">
-			<h1>My Projects</h1>
+			<div class="col-lg-8 col-lg-offset-2">
+				<h4>ABOUT THE PROJECT</h4>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+			</div>
+			<div class="col-lg-10 col-lg-offset-1 mt">
+				<img class="img-responsive" src="assets/img/pr01.jpg">
+				<br>
+				<img class="img-responsive" src="assets/img/pr02.jpg">
+			</div>
 
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work_howlong.html"><img src="assets/img/portfolio/folio01.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work_codestorage.html"><img src="assets/img/portfolio/folio02.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="#"><img src="assets/img/portfolio/folio03.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="#"><img src="assets/img/portfolio/folio04.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="#"><img src="assets/img/portfolio/folio05.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="#"><img src="assets/img/portfolio/folio06.png" class="img-responsive"></a>
-			</div>
 		</div><! --/row -->
 	</div><! --/container -->
-
+	
 	<div id="social">
 		<div class="container">
 			<div class="row centered">
-				<div class="col-lg-12">
-					<a href="https://github.com/AntonioMIN"><i class="fa fa-github"></i></a>
+				<div class="col-lg-2">
+					<a href="#"><i class="fa fa-dribbble"></i></a>
 				</div>
+				<div class="col-lg-2">
+					<a href="#"><i class="fa fa-facebook"></i></a>
+				</div>
+				<div class="col-lg-2">
+					<a href="#"><i class="fa fa-twitter"></i></a>
+				</div>
+				<div class="col-lg-2">
+					<a href="#"><i class="fa fa-linkedin"></i></a>
+				</div>
+				<div class="col-lg-2">
+					<a href="#"><i class="fa fa-instagram"></i></a>
+				</div>
+				<div class="col-lg-2">
+					<a href="#"><i class="fa fa-tumblr"></i></a>
+				</div>
+			
 			</div><! --/row -->
 		</div><! --/container -->
 	</div><! --/social -->
@@ -104,18 +110,21 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-4">
-					<p><b>SOFTWARE DEVELOPER</b></p>
+					<p><b>WEB DESIGNER, DEVELOPER & GAME ADDICT</b></p>
+				</div>
+			
+				<div class="col-lg-4">
+					<p>Living in the amazing London.</p>
 				</div>
 				<div class="col-lg-4">
-					<p>Just start.</p>
+					<p>hello@instant.com</p>
 				</div>
-				<div class="col-lg-4">
-					<p>gvvvv1123@gmail.com</p>
-				</div>
+			
 			</div>
+		
 		</div>
 	</div><! --/footerwrap -->
-
+	
 
 
     <!-- Bootstrap core JavaScript
