--- a/work_codestorage.html
+++ b/work_codestorage.html
@@ -52,45 +52,36 @@
     </div>
 
 
-	<div id="headerwrap">
+	<div id="workwrap" style="background : url('assets/img/codestorage/baner.png') no-repeat center top;">
 	    <div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
-					<h4>HELLO PEOPLE, MY NAME IS</h4>
-					<h1>ANTONIO MIN</h1>
-					<h4>SOFTWARE DEVELOPER</h4>
+					<h4>WEB APPLICATION</h4>
+					<h1>CODE STORAGE</h1>
+					<h4>SHARE THE CODE</h4>
 				</div>
 			</div><! --/row -->
 	    </div> <!-- /container -->
-	</div><! --/headerwrap -->
+	</div><! --/workwrap -->
 
 	<section id="works"></section>
 	<div class="container">
 		<div class="row centered mt mb">
-			<h1>My Projects</h1>
+			<div class="col-lg-8 col-lg-offset-2">
+				<h4>ABOUT THE PROJECT</h4>
+				<p>IE10에서 Github를 사용할 수 없어 만들게된 웹 애플리케이션. 코드 저장 & 공유를 위해 만들었다. 프로그래밍을 배우는 사람들에게 코드를 저장하거나 다른 사람의 소스 게시판 형식으로 볼 수 있다.</p>
+			</div>
+			<div class="col-lg-10 col-lg-offset-1 mt">
+        <a href="http://globalzombie.dothome.co.kr/">
+				<i class="fa fa-home fa-4x" aria-hidden="true"></i>
+        <p>Look around</p>
+        </a>
+			</div>
 
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work_howlong.html"><img src="assets/img/portfolio/folio01.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work_codestorage.html"><img src="assets/img/portfolio/folio02.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="#"><img src="assets/img/portfolio/folio03.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="#"><img src="assets/img/portfolio/folio04.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="#"><img src="assets/img/portfolio/folio05.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="#"><img src="assets/img/portfolio/folio06.png" class="img-responsive"></a>
-			</div>
 		</div><! --/row -->
 	</div><! --/container -->
 
-	<div id="social">
+  <div id="social">
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-12">
