--- a/work_howlong.html
+++ b/work_howlong.html
@@ -52,45 +52,36 @@
     </div>
 
 
-	<div id="headerwrap">
+	<div id="workwrap" style="background : url('assets/img/howlong/Howlong_baner.png') no-repeat center top;">
 	    <div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
-					<h4>HELLO PEOPLE, MY NAME IS</h4>
-					<h1>ANTONIO MIN</h1>
-					<h4>SOFTWARE DEVELOPER</h4>
+					<h4>GAME</h4>
+					<h1>HOW LONG</h1>
+					<h4>TEXT SURVIVAL GAME</h4>
 				</div>
 			</div><! --/row -->
 	    </div> <!-- /container -->
-	</div><! --/headerwrap -->
+	</div><! --/workwrap -->
 
 	<section id="works"></section>
 	<div class="container">
 		<div class="row centered mt mb">
-			<h1>My Projects</h1>
+			<div class="col-lg-8 col-lg-offset-2">
+				<h4>ABOUT THE PROJECT</h4>
+				<p>첫 Unity Game. 첫 정식 출시 소프트웨어. 2016년 3월 부터 계획하던 프로젝트이며 같은 해 12월초에 개발 착수하여 다음해 1월에 베타 출시하였다. 텍스트 기반 생존 게임. </p>
+			</div>
+			<div class="col-lg-10 col-lg-offset-1 mt">
+				<img class="img-responsive" src="assets/img/howlong/Screenshot0.png">
+				<br>
+				<img class="img-responsive" src="assets/img/howlong/Screenshot1.png">
+			</div>
+      <a href='https://play.google.com/store/apps/details?id=com.antoniostudio.howlong&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/></a>
 
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work_howlong.html"><img src="assets/img/portfolio/folio01.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work_codestorage.html"><img src="assets/img/portfolio/folio02.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="#"><img src="assets/img/portfolio/folio03.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="#"><img src="assets/img/portfolio/folio04.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="#"><img src="assets/img/portfolio/folio05.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="#"><img src="assets/img/portfolio/folio06.png" class="img-responsive"></a>
-			</div>
 		</div><! --/row -->
 	</div><! --/container -->
 
-	<div id="social">
+  <div id="social">
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-12">
