--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 			<h1>My Projects</h1>
 
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work_howlong.html"><img src="assets/img/portfolio/folio01.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
 				<a href="work_codestorage.html"><img src="assets/img/portfolio/folio02.png" class="img-responsive"></a>
 			</div>
+            <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+                <a href="#"><img src="assets/img/portfolio/folio03.png" class="img-responsive"></a>
+            </div>
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
 				<a href="#"><img src="assets/img/portfolio/folio03.png" class="img-responsive"></a>
 			</div>
