--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>Antonio Min</title>
+    <title>Antonio Min - About</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -64,12 +64,45 @@
 	<div class="container">
 		<div class="row centered mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
-				<h2>ANTONIO MIN</h2>
-				<p>한글 이름, 민병윤. 중학생 때부터 시작한 프로그래머가 되겠다는 꿈. 사람들에게 편리를 주는 소프트웨어를 만들자. 어떤 것이 있으면 좋을까. 나는 어떤 것이 불편한가. </p>
-				<p>영감. 정의. 설계. 구현. Build up new software.</p>
+				<h2>Who</h2>
+				<p>Name : 민병윤</p>
+				<p>Birthday : 1998 - 5 - 10</p>
+                <p>Primary position : Back-end Developer</p>
 				<p>상상을 현실로 구현하는 재미. Software development</p>
+                <br />
 			</div>
-
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Education</h2>
+                <p>김해경원고등학교 - 2017 졸업</p>
+                <p>호서대학교 컴퓨터정보공학부 - 2017 입학, 재학</p>
+                <br />
+            </div>
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Awards</h2>
+                <p>한국정보올림피아드 - 경남 금상 - 2016</p>
+                <p>한국정보올림피아드 - 전국 동상 - 2016</p>
+                <br />
+            </div>
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Stack</h2>
+                <p>C & C++</p>
+                <p>C#</p>
+                <p>HTML5/CSS/JS</p>
+                <p>PHP - with CodeIgniter</p>
+                <p>MySQL</p>
+                <br />
+            </div>
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Primary Projects</h2>
+                <p>Algorithm project (2016.8) - <a href="https://github.com/AntonioMIN/Minesweeper-solve-algorithm">Minesweeper solve algorithm</a></p>
+                <p>Web Application (2016.1~) - <a href="http://codestorage.cf/">Code storage</a></p>
+                <br />
+            </div>
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Studying now</h2>
+                <p>C# .NET - 2017.1~</p>
+                <p>Web Scraping - C# - 2017.4~</p>
+            </div>
 		</div><! --/row -->
 	</div><! --/container -->
 
