--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -57,7 +57,7 @@
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
 					<h4>HELLO PEOPLE, MY NAME IS</h4>
-					<h1>ANTONIO MIN</h1>
+					<h1>민병윤</h1>
 					<h4>SOFTWARE DEVELOPER</h4>
 				</div>
 			</div><! --/row -->
@@ -77,15 +77,6 @@
             </div>
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
 				<a href="#"><img src="assets/img/portfolio/folio03.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="#"><img src="assets/img/portfolio/folio04.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="#"><img src="assets/img/portfolio/folio05.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="#"><img src="assets/img/portfolio/folio06.png" class="img-responsive"></a>
 			</div>
 		</div><! --/row -->
 	</div><! --/container -->
