Update project. Hoseo Dormitory menu App

--- a/work_hoseodormitorymenu.html
+++ b/work_hoseodormitorymenu.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -52,36 +52,36 @@
     </div>
 
 
-	<div id="headerwrap">
+	<div id="workwrap" style="background : url('assets/img/codestorage/baner.png') no-repeat center top;">
 	    <div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
-					<h4>HELLO PEOPLE, MY NAME IS</h4>
-					<h1>민병윤</h1>
-					<h4>SOFTWARE DEVELOPER</h4>
+					<h4>XAMARIN APPLICATION</h4>
+					<h2>HOSEO DORMITORY MENU</h2>
+					<h4>HOSEO UNIVERSITY DORMITORY MENU APPLICATION</h4>
 				</div>
 			</div><! --/row -->
 	    </div> <!-- /container -->
-	</div><! --/headerwrap -->
+	</div><! --/workwrap -->
 
 	<section id="works"></section>
 	<div class="container">
 		<div class="row centered mt mb">
-			<h1>My Projects</h1>
+			<div class="col-lg-8 col-lg-offset-2">
+				<h4>ABOUT THE PROJECT</h4>
+				<p>호서대학교 생활관 식단표 애플리케이션입니다. 식단을 보기위해서는 홈페이지에 들어가야하는 불편함을 해소하기 위해 개발하였습니다.</p>
+			</div>
+			<div class="col-lg-10 col-lg-offset-1 mt">
+        <a href="https://play.google.com/store/apps/details?id=com.antoniostudio.hoseodormitorymenu">
+				<i class="fa fa-home fa-4x" aria-hidden="true"></i>
+        <p>Look around</p>
+        </a>
+			</div>
 
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work_codestorage.html"><img src="assets/img/portfolio/folio02.png" class="img-responsive"></a>
-			</div>
-            <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-                <a href="work_hoseodormitorymenu.html"><img src="assets/img/portfolio/folio03.png" class="img-responsive"></a>
-            </div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="#"><img src="assets/img/portfolio/folio04.png" class="img-responsive"></a>
-			</div>
 		</div><! --/row -->
 	</div><! --/container -->
 
-	<div id="social">
+  <div id="social">
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-12">
