--- a/work_hoseodormitorymenu.html
+++ b/work_hoseodormitorymenu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -69,13 +69,17 @@
 		<div class="row centered mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
 				<h4>ABOUT THE PROJECT</h4>
-				<p>호서대학교 생활관 식단표 애플리케이션입니다. 식단을 보기위해서는 홈페이지에 들어가야하는 불편함을 해소하기 위해 개발하였습니다.</p>
+				<p>호서대학교 생활관 식단표 애플리케이션입니다. 식단을 보기위해서는 홈페이지에 들어가야하는 불편함을 해소하기 위해 개발하게 되었습니다.</p>
+                </div>
+                    <img width="200" height="200" src="assets/img/hoseodormitorymenu/icon.png">
+                    <div>
+                        <img width="370" height="630" src="assets/img/hoseodormitorymenu/screenshot1.png">
+                        <img width="370" height="630" src="assets/img/hoseodormitorymenu/screenshot2.png">
+                    </div>
+                <div>
 			</div>
 			<div class="col-lg-10 col-lg-offset-1 mt">
-        <a href="https://play.google.com/store/apps/details?id=com.antoniostudio.hoseodormitorymenu">
-				<i class="fa fa-home fa-4x" aria-hidden="true"></i>
-        <p>Look around</p>
-        </a>
+                <a href='https://play.google.com/store/apps/details?id=com.antoniostudio.hoseodormitorymenu&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img width="215" height="100" alt='다운로드하기 Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/ko_badge_web_generic.png' /></a>
 			</div>
 
 		</div><! --/row -->
