--- a/about.html
+++ b/about.html
@@ -56,6 +56,7 @@
 	    <div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
+                    <h1>Hello.. I am</h1>
 				</div>
 			</div><! --/row -->
 	    </div> <!-- /container -->
