Added awards record

--- a/about.html
+++ b/about.html
@@ -82,6 +82,7 @@
                 <h2>Awards</h2>
                 <p>한국정보올림피아드 - 경남 금상 - 2016</p>
                 <p>한국정보올림피아드 - 전국 동상 - 2016</p>
+                <p>제 1 회 쿡앱스 게임 제작 공모전 - 금상 - 2017</p>
                 <br />
             </div>
             <div class="col-lg-8 col-lg-offset-2">
