Added workflow project. Change about information

--- a/work_workflow.html
+++ b/work_workflow.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>Antonio Min - About</title>
+    <title>Antonio Min</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -43,70 +43,52 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="index.html">Home</a></li>
-            <li class="active"><a href="about.html">About</a></li>
-            <li><a href="index.html#works">Works</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="#works">Works</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </div>
 
 
-	<div id="aboutwrap">
+	<div id="workwrap" style="background : url('assets/img/codestorage/baner.png') no-repeat center top;">
 	    <div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
-                    <h1>Hello.. I am</h1>
+					<h4>XAMARIN APPLICATION</h4>
+					<h2>WORKFLOW</h2>
+					<h4>WORK IN ORDER</h4>
 				</div>
 			</div><! --/row -->
 	    </div> <!-- /container -->
-	</div><! --/aboutwrap -->
+	</div><! --/workwrap -->
 
+	<section id="works"></section>
 	<div class="container">
 		<div class="row centered mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
-				<h2>Who</h2>
-				<p>Name : 민병윤</p>
-				<p>Birthday : 1998 - 5 - 10</p>
-                <p>Primary position : Back-end Developer</p>
-				<p>상상을 현실로 구현하는 재미. Software development</p>
-                <br />
+				<h4>ABOUT THE PROJECT</h4>
+				<p>일을 순서대로 진행할 수 있도록 도와주는 애플리케이션이 있다면 좋겠다는 생각에서 시작된 프로젝트입니다. 일의 순서를 정하고 알림과 마감일을 정하여 생산성을 높일수 있도록 도와줍니다.</p>
+                </div>
+                    <img width="200" height="200" src="assets/img/workflow/icon.png">
+                    <div>
+                        <img width="370" height="630" src="assets/img/workflow/dashboard.png">
+                        <img width="370" height="630" src="assets/img/workflow/workflow.png">
+                    </div>
+                <div>
 			</div>
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Education</h2>
-                <p>김해경원고등학교 - 2017 졸업</p>
-                <p>호서대학교 컴퓨터정보공학부 - 2017 입학, 재학</p>
-                <br />
-            </div>
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Awards</h2>
-                <p>한국정보올림피아드 - 경남 금상 - 2016</p>
-                <p>한국정보올림피아드 - 전국 동상 - 2016</p>
-                <p>제 1 회 쿡앱스 게임 제작 공모전 - 금상 - 2017</p>
-                <br />
-            </div>
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Stack</h2>
-                <p>C & C++</p>
-                <p>C# - with Xamarin</p>
-                <p>HTML5/CSS/JS</p>
-                <p>PHP - with CodeIgniter</p>
-                <p>MySQL</p>
-                <br />
-            </div>
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Primary Projects</h2>
-                <p>Algorithm project (2016.8) - <a href="https://github.com/AntonioMIN/Minesweeper-solve-algorithm">Minesweeper solve algorithm</a></p>
-                <p>Web Application (2016.1~) - <a href="http://codestorage.cf/">Code storage</a></p>
-                <br />
-            </div>
+			<div class="col-lg-10 col-lg-offset-1 mt">
+                <a href='https://play.google.com/store/apps/details?id=com.antoniomin.workflow&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img width="215" height="100" alt='다운로드하기 Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/ko_badge_web_generic.png' /></a>
+			</div>
+
 		</div><! --/row -->
 	</div><! --/container -->
 
-	<div id="social">
+  <div id="social">
 		<div class="container">
 			<div class="row centered">
-        <div class="col-lg-12">
+				<div class="col-lg-12">
 					<a href="https://github.com/AntonioMIN"><i class="fa fa-github"></i></a>
 				</div>
 			</div><! --/row -->
@@ -116,7 +98,7 @@
 	<div id="footerwrap">
 		<div class="container">
 			<div class="row centered">
-        <div class="col-lg-4">
+				<div class="col-lg-4">
 					<p><b>SOFTWARE DEVELOPER</b></p>
 				</div>
 				<div class="col-lg-4">
