--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <a href="work_hoseodormitorymenu.html"><img src="assets/img/portfolio/folio03.png" class="img-responsive"></a>
             </div>
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="#"><img src="assets/img/portfolio/folio04.png" class="img-responsive"></a>
+				<a href="work_workflow.html"><img src="assets/img/portfolio/folio04.png" class="img-responsive"></a>
 			</div>
 		</div><! --/row -->
 	</div><! --/container -->
