--- a/workflow_help.html
+++ b/workflow_help.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>Antonio Min</title>
+    <title>Antonio Min - Workflow Help</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -43,54 +43,38 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="#works">Works</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li class="active"><a href="about.html">About</a></li>
+            <li><a href="index.html#works">Works</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </div>
 
 
-	<div id="workwrap" style="background : url('assets/img/codestorage/baner.png') no-repeat center top;">
+	<div id="aboutwrap">
 	    <div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
-					<h4>XAMARIN APPLICATION</h4>
-					<h2>WORKFLOW</h2>
-					<h4>WORK IN ORDER</h4>
+                    <h1>Hello.. I am</h1>
 				</div>
 			</div><! --/row -->
 	    </div> <!-- /container -->
-	</div><! --/workwrap -->
+	</div><! --/aboutwrap -->
 
-	<section id="works"></section>
 	<div class="container">
 		<div class="row centered mt mb">
-			<div class="col-lg-8 col-lg-offset-2">
-				<h4>ABOUT THE PROJECT</h4>
-				<p>일을 순서대로 진행할 수 있도록 도와주는 애플리케이션이 있다면 좋겠다는 생각에서 시작된 프로젝트입니다. 일의 순서를 정하고 알림과 마감일을 정하여 생산성을 높일수 있도록 도와줍니다.</p>
-                </div>
-                    <img width="200" height="200" src="assets/img/workflow/icon.png">
-                    <div>
-                        <img width="370" height="630" src="assets/img/workflow/dashboard.png">
-                        <img width="370" height="630" src="assets/img/workflow/workflow.png">
-                    </div>
-                <div>
-            </div>
-            <div class="col-lg-10 col-lg-offset-1 mt">
-                    <a href='workflow_help.html'>WorkFlow Help</a>
-            </div>
-			<div class="col-lg-10 col-lg-offset-1 mt">
-                <a href='https://play.google.com/store/apps/details?id=com.antoniomin.workflow&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img width="215" height="100" alt='다운로드하기 Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/ko_badge_web_generic.png' /></a>
-            </div>
+                <h1>WorkFlow</h1>
+                <blockquote>
+                    <p>If you don't know Korean, please use google translation service.</p>
+                    <p><a href="https://translate.google.com" target="_blank">https://translate.google.com</a><br></p></blockquote><p>2017년 9월 30일, Google Play Store에 출시된 "WorkFlow"는 사용자의 어떠한 개인정보를 수집하지 않습니다.</p><h2>Q&amp;A</h2><h3>Q. 일은 어떻게 추가하나요?</h3><p>일을 추가하기 위해서는 우선 "Workflow"를 만들어야 합니다. 첫 화면 툴바에서 '+'아이콘을 누르면 새로운 "Workflow"를 만들수있습니다.</p><h3>Q. Workflow의 이름은 어떻게 바꾸나요?</h3><p>첫 화면에서 좌우 슬라이드로 이름을 바꾸고자하는 "Workflow"로 이동한 후, 상단 툴바에 표시된 이름을 터치하여 바꿀수있습니다. 글자 제한은 없지만 너무 길면 전부 표시되지 않습니다.</p><h3>Q. 일의 순서는 어떻게 바꾸나요?</h3><p>첫 화면에서 좌우 슬라이드로 원하는 "Workflow"로 이동한 후, 일 카드를 길게누르면 순서를 바꿀수 있습니다.</p><h3>Q. 일은 어떻게 완료하나요?</h3><p>일 카드를 눌러 일 페이지로 이동하면 하단에 손가락 버튼을 눌러 완료할 수 있습니다.</p><h3>Q. 대시보드에 정렬 모드는 어떤 것인가요?</h3><p>대시보드의 정렬 모드로 '날짜 정렬'과 'Workflow 정렬'이 있습니다. '날짜 정렬'은 날짜를 기준으로 정렬되어 보여집니다. 'Workflow 정렬'은 "Workflow"의 항목들이 모여서 보여집니다.</p>
 		</div><! --/row -->
 	</div><! --/container -->
 
-  <div id="social">
+	<div id="social">
 		<div class="container">
 			<div class="row centered">
-				<div class="col-lg-12">
+        <div class="col-lg-12">
 					<a href="https://github.com/AntonioMIN"><i class="fa fa-github"></i></a>
 				</div>
 			</div><! --/row -->
@@ -100,7 +84,7 @@
 	<div id="footerwrap">
 		<div class="container">
 			<div class="row centered">
-				<div class="col-lg-4">
+        <div class="col-lg-4">
 					<p><b>SOFTWARE DEVELOPER</b></p>
 				</div>
 				<div class="col-lg-4">
