--- a/workflow_help.html
+++ b/workflow_help.html
@@ -56,7 +56,7 @@
 	    <div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
-                    <h1>Hello.. I am</h1>
+                    <h1>WORKFLOW HELP</h1>
 				</div>
 			</div><! --/row -->
 	    </div> <!-- /container -->
