--- a/about.html
+++ b/about.html
@@ -67,8 +67,7 @@
 			<div class="col-lg-8 col-lg-offset-2">
 				<h2>Who</h2>
 				<p>Name : 민병윤</p>
-				<p>Birthday : 1998 - 5 - 10</p>
-                <p>Primary position : Back-end Developer</p>
+        <p>Primary position : Back-end Developer</p>
 				<p>상상을 현실로 구현하는 재미. Software development</p>
                 <br />
 			</div>
@@ -97,7 +96,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Primary Projects</h2>
                 <p>Algorithm project (2016.8) - <a href="https://github.com/AntonioMIN/Minesweeper-solve-algorithm">Minesweeper solve algorithm</a></p>
-                <p>Web Application (2016.1~) - <a href="http://codestorage.cf/">Code storage</a></p>
+                <p>Web Application (2016.1~2017.2) - <a href="http://globalzombie.dothome.co.kr/">Code storage</a></p>
                 <br />
             </div>
 		</div><! --/row -->
