--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <link href="assets/css/style.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
 
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <!-- Animate -->
+    <link rel="stylesheet" href="assets/css/animate.css" type="text/css">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -28,37 +28,12 @@
   </head>
 
   <body>
-
-    <!-- Static navbar -->
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="index.html">ANTONIOMIN</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="#works">Works</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
-
-
 	<div id="headerwrap">
 	    <div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
-					<h4>HELLO PEOPLE, MY NAME IS</h4>
-					<h1>민병윤</h1>
-					<h4>SOFTWARE DEVELOPER</h4>
+					<h1>SOFTWARE DEVELOPER</h1>
+					<h4>민병윤</h4>
 				</div>
 			</div><! --/row -->
 	    </div> <!-- /container -->
@@ -66,24 +41,123 @@
 
 	<section id="works"></section>
 	<div class="container">
-		<div class="row centered mt mb">
-			<h1>My Projects</h1>
-
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work_codestorage.html"><img src="assets/img/portfolio/folio02.png" class="img-responsive"></a>
-			</div>
-            <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-                <a href="work_hoseodormitorymenu.html"><img src="assets/img/portfolio/folio03.png" class="img-responsive"></a>
+    <h1>Projects</h1>
+		<div class="project row centered">
+      <div class="container">
+        <div class="col-md-8">
+          <img src="assets/img/baner.png" alt="" class="img-responsive img-rounded">
+        </div>
+        <div class="col-md-4">
+          <h2>CodeStorage</h2>
+          <p class="lead">어떤 브라우저에서도 간편하게 코드 저장 &amp; 공유를 위한 서비스</p><p>Copy &amp; Paste 또는 파일 업로드로 간편하게 작성한 코드를 업로드할 수 있습니다.</p><p>Personal Key를 통해서 로그인없이 빠르게 개인 저장소에 업로드할 수 있습니다.</p>
+          <a href="http://globalzombie.dothome.co.kr/"><p>Visit</p></a>
+        </div>
+      </div>
+    </div><! --/row -->
+    <hr>
+    <div class="project row centered">
+        <div class="container">
+          <div class="col-md-4">
+            <h2>Hoseo Dormitory Menu</h2>
+            <p class="lead">오늘 석식은 뭐지? 밥먹으러 가기전에 간편하게 오늘의 메뉴를 확인할 수 있습니다.</p><p>Xamarin과 웹 크롤링을 이용한 메뉴 어플리케이션입니다. </p>
+            <p>오늘의 식단과 한 주 동안의 식단을 확인할 수 있습니다.</p>
+            <a href='https://play.google.com/store/apps/details?id=com.antoniostudio.hoseodormitorymenu&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
+              <img class="img-responsive" alt='다운로드하기 Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/ko_badge_web_generic.png' />
+            </a>
+          </div>
+          <div class="col-md-8">
+            <div class="row">
+              <div class="col-md-6">
+                  <img src="assets/img/hoseodormitorymenu/screenshot1.png" alt="" class="img-responsive img-rounded center-block" style="height: 30em;">
+              </div>
+              <div class="col-md-6">
+                <img src="assets/img/hoseodormitorymenu/icon.png" alt="" class="img-responsive img-rounded center-block">
+              </div>
             </div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work_workflow.html"><img src="assets/img/portfolio/folio04.png" class="img-responsive"></a>
-			</div>
-		</div><! --/row -->
+          </div>
+        </div>
+      </div><! --/row -->
+      <hr>
+      <div class="project row centered">
+        <div class="container">
+          <div class="col-md-8">
+            <div class="row">
+              <div class="col-md-6">
+                <img src="assets/img/workflow/dashboard.png" alt="" class="img-responsive img-rounded center-block" style="height: 30em;">
+              </div>
+              <div class="col-md-6">
+                  <img src="assets/img/workflow/icon.png" alt="" class="img-responsive img-rounded center-block">
+                </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <h2>WorkFlow</h2>
+            <p class="lead">몸은 하나인데 해야할 일은 너무나 많죠? 하나하나 해보는건 어떠세요?</p><p>Xamarin Android를 통해서 만들어진 일정관리 어플리케이션입니다.</p>
+            <p>차례대로, 순서대로 해야할 일을 저장하고 진행하세요.</p>
+            <a href='https://play.google.com/store/apps/details?id=com.antoniomin.workflow&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
+              <img class="img-responsive" alt='다운로드하기 Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/ko_badge_web_generic.png' />
+            </a>
+          </div>
+        </div>
+      </div><! --/row -->
+      <hr>
+      <div class="project row centered">
+        <div class="container">
+          <div class="col-md-4">
+            <h2>My Bitcoin</h2>
+            <p class="lead">요즘 비트코인이 대세라구요?</p><p>Korbit API를 이용한 DB Serverless 웹 서비스 입니다.</p>
+            <p>한개의 페이지에서 원하는 정보를 간편하게 볼 수 있습니다. 또 수익률 계산기도 있습니다.</p>
+            <a href="https://github.com/AntonioMIN/KorbitAPI_WebService" style="font-size:20px;"><i class="fa fa-github"></i> Visit GitHub</a>
+          </div>
+          <div class="col-md-8">
+              <img src="assets/img/mybitcoin1.png" alt="" class="img-responsive img-rounded center-block" style="height: 30em;">
+          </div>
+        </div>
+      </div><! --/row -->
+      <hr>
+      <h1>About</h1>
+      <div class="project row centered">
+        <div class="container">
+          <div class="col-lg-8 col-lg-offset-2">
+            <h2>Who</h2>
+            <p>Name : 민병윤 (gvvvv1123@gmail.com)</p>
+            <p>Primary position : Back-end Developer</p>
+            <p>상상을 현실로 구현하는 재미. Software development</p>
+            <br />
+          </div>
+          <div class="col-lg-8 col-lg-offset-2">
+              <h2>Education</h2>
+              <p>김해경원고등학교 - 2017 졸업</p>
+              <p>호서대학교 컴퓨터정보공학부 - 2017 입학, 재학</p>
+              <br />
+          </div>
+          <div class="col-lg-8 col-lg-offset-2">
+              <h2>Awards</h2>
+              <p>한국정보올림피아드 - 경남 금상 - 2016</p>
+              <p>한국정보올림피아드 - 전국 동상 - 2016</p>
+              <p>제 1 회 쿡앱스 게임 제작 공모전 - 금상 - 2017</p>
+              <br />
+          </div>
+          <div class="col-lg-8 col-lg-offset-2">
+              <h2>Stack</h2>
+              <p><b>Software Development</b> - is important skill ever!</p>
+              <p>Deep dived in <b>C &amp; C++</b></p>
+              <p>Mobile develop with <b>C# Xamarin</b></p>
+              <p>Web Development <b>HTML5/CSS/JS, PHP, Python, ASP.NET Core</b></p>
+              <p>Datebase Development <b>MySQL</b></p>
+              <br />
+          </div>
+        </div>
+      </div><! --/row -->
+    <hr>
+    <h1>Other Projects</h1>
+    <p>Algorithm project (2016.8) - <a href="https://github.com/AntonioMIN/Minesweeper-solve-algorithm">Minesweeper solve algorithm</a></p>
+    <br />
 	</div><! --/container -->
 
 	<div id="social">
 		<div class="container">
-			<div class="row centered">
+			<div class="row">
 				<div class="col-lg-12">
 					<a href="https://github.com/AntonioMIN"><i class="fa fa-github"></i></a>
 				</div>
@@ -114,5 +188,14 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/viewportchecker.js"></script>
+    <script>
+      jQuery(document).ready(function() {
+        jQuery('.project').addClass("ani_hidden").viewportChecker({
+            classToAdd: 'ani_visible animated fadeIn',
+            offset: 100    
+          });   
+      });
+    </script>
   </body>
 </html>
