--- a/work_codestorage.html
+++ b/work_codestorage.html
@@ -68,13 +68,11 @@
 	<div class="container">
 		<div class="row centered mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
-				<h4>ABOUT THE PROJECT</h4>
 				<p>IE10에서 Github를 사용할 수 없어 만들게된 웹 애플리케이션. 코드 저장 & 공유를 위해 만들었다. 프로그래밍을 배우는 사람들에게 코드를 저장하거나 다른 사람의 소스 게시판 형식으로 볼 수 있다.</p>
 			</div>
 			<div class="col-lg-10 col-lg-offset-1 mt">
         <a href="http://globalzombie.dothome.co.kr/">
-				<i class="fa fa-home fa-4x" aria-hidden="true"></i>
-        <p>Look around</p>
+        <p>Visit</p>
         </a>
 			</div>
 
