--- a/index.html
+++ b/index.html
@@ -135,25 +135,31 @@
             <br />
           </div>
           <div class="col-lg-8 col-lg-offset-2">
+            <h2>Activities</h2>
+            <p><a href="https://looroo.net">LooRoo</a> Full-Stack, Lead Developer(2017.6~)</p>
+            <br />
+          </div>
+          <div class="col-lg-8 col-lg-offset-2">
+            <h2>Stack</h2>
+            <p><b>Software Development</b> - is important skill ever!</p>
+            <p>Deep dived in <b>C &amp; C++</b></p>
+            <p>Mobile develop with <b>C# Xamarin</b></p>
+            <p>Web Development <b>HTML5/CSS/JS, PHP, Python, ASP.NET Core</b></p>
+            <p>Datebase Development <b>MySQL</b></p>
+            <p>Game Development <b>Unity</b></p>
+            <br />
+          </div>
+          <div class="col-lg-8 col-lg-offset-2">
+            <h2>Awards</h2>
+            <p>한국정보올림피아드 - 경남 금상 - 2016</p>
+            <p>한국정보올림피아드 - 전국 동상 - 2016</p>
+            <p>제 1 회 쿡앱스 게임 제작 공모전 - 금상 - 2017</p>
+            <br />
+          </div>
+          <div class="col-lg-8 col-lg-offset-2">
               <h2>Education</h2>
               <p>김해경원고등학교 - 2017 졸업</p>
               <p>호서대학교 컴퓨터정보공학부 - 2017 입학, 재학</p>
-              <br />
-          </div>
-          <div class="col-lg-8 col-lg-offset-2">
-              <h2>Awards</h2>
-              <p>한국정보올림피아드 - 경남 금상 - 2016</p>
-              <p>한국정보올림피아드 - 전국 동상 - 2016</p>
-              <p>제 1 회 쿡앱스 게임 제작 공모전 - 금상 - 2017</p>
-              <br />
-          </div>
-          <div class="col-lg-8 col-lg-offset-2">
-              <h2>Stack</h2>
-              <p><b>Software Development</b> - is important skill ever!</p>
-              <p>Deep dived in <b>C &amp; C++</b></p>
-              <p>Mobile develop with <b>C# Xamarin</b></p>
-              <p>Web Development <b>HTML5/CSS/JS, PHP, Python, ASP.NET Core</b></p>
-              <p>Datebase Development <b>MySQL</b></p>
               <br />
           </div>
         </div>
