--- a/index.html
+++ b/index.html
@@ -44,22 +44,22 @@
 					<h1>SOFTWARE DEVELOPER</h1>
 					<h4>민병윤</h4>
 				</div>
-			</div><! --/row -->
+			</div><!--/row -->
 	    </div> <!-- /container -->
-	</div><! --/headerwrap -->
+	</div><!--/headerwrap -->
 
 	<section id="works"></section>
 	<div class="container">
     <h1>Projects</h1>
 		<div class="project row centered">
       <div class="container">
-        <div class="col-md-8">
-          <img src="assets/img/baner.png" alt="" class="img-responsive img-rounded">
-        </div>
         <div class="col-md-4">
           <h2>CodeStorage</h2>
           <p class="lead">어떤 브라우저에서도 간편하게 코드 저장 &amp; 공유를 위한 서비스</p><p>Copy &amp; Paste 또는 파일 업로드로 간편하게 작성한 코드를 업로드할 수 있습니다.</p><p>Personal Key를 통해서 로그인없이 빠르게 개인 저장소에 업로드할 수 있습니다.</p>
           <a href="http://globalzombie.dothome.co.kr/"><p>Visit</p></a>
+        </div>
+        <div class="col-md-8">
+          <img src="assets/img/baner.png" alt="" class="img-responsive img-rounded">
         </div>
       </div>
     </div><! --/row -->
@@ -77,7 +77,7 @@
           <div class="col-md-8">
             <div class="row">
               <div class="col-md-6">
-                  <img src="assets/img/hoseodormitorymenu/screenshot1.png" alt="" class="img-responsive img-rounded center-block" style="height: 30em;">
+                  <img src="assets/img/hoseodormitorymenu/screenshot1.png" alt="" class="img-responsive img-rounded center-block">
               </div>
               <div class="col-md-6">
                 <img src="assets/img/hoseodormitorymenu/icon.png" alt="" class="img-responsive img-rounded center-block">
@@ -89,16 +89,6 @@
       <hr>
       <div class="project row centered">
         <div class="container">
-          <div class="col-md-8">
-            <div class="row">
-              <div class="col-md-6">
-                <img src="assets/img/workflow/dashboard.png" alt="" class="img-responsive img-rounded center-block" style="height: 30em;">
-              </div>
-              <div class="col-md-6">
-                  <img src="assets/img/workflow/icon.png" alt="" class="img-responsive img-rounded center-block">
-                </div>
-            </div>
-          </div>
           <div class="col-md-4">
             <h2>WorkFlow</h2>
             <p class="lead">몸은 하나인데 해야할 일은 너무나 많죠? 하나하나 해보는건 어떠세요?</p><p>Xamarin Android를 통해서 만들어진 일정관리 어플리케이션입니다.</p>
@@ -106,6 +96,16 @@
             <a href='https://play.google.com/store/apps/details?id=com.antoniomin.workflow&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
               <img class="img-responsive" alt='다운로드하기 Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/ko_badge_web_generic.png' />
             </a>
+          </div>
+          <div class="col-md-8">
+            <div class="row">
+              <div class="col-md-6">
+                <img src="assets/img/workflow/dashboard.png" alt="" class="img-responsive img-rounded center-block">
+              </div>
+              <div class="col-md-6">
+                <img src="assets/img/workflow/icon.png" alt="" class="img-responsive img-rounded center-block">
+              </div>
+            </div>
           </div>
         </div>
       </div><! --/row -->
@@ -119,7 +119,21 @@
             <a href="https://github.com/AntonioMIN/KorbitAPI_WebService" style="font-size:20px;"><i class="fa fa-github"></i> Visit GitHub</a>
           </div>
           <div class="col-md-8">
-              <img src="assets/img/mybitcoin1.png" alt="" class="img-responsive img-rounded center-block" style="height: 30em;">
+              <img src="assets/img/mybitcoin1.png" alt="" class="img-responsive img-rounded center-block">
+          </div>
+        </div>
+      </div><! --/row -->
+      <hr>
+      <div class="project row centered">
+        <div class="container">
+          <div class="col-md-4">
+            <h2>Comuiz</h2>
+            <p class="lead">Comunity Quiz</p><p>퀴즈를 만들어 유저들과 즐길수 있는 웹 페이지입니다.</p>
+            <p>OX문제 부터 객관식 문제까지 자유롭게 만들수 있습니다.</p>
+            <a href="https://github.com/AntonioMIN/Comuiz" style="font-size:20px;"><i class="fa fa-github"></i> Visit GitHub</a>
+          </div>
+          <div class="col-md-8">
+              <img src="assets/img/comuiz/comuizpage.png" alt="" class="img-responsive img-rounded center-block">
           </div>
         </div>
       </div><! --/row -->
@@ -136,7 +150,7 @@
           </div>
           <div class="col-lg-8 col-lg-offset-2">
             <h2>Activities</h2>
-            <p><a href="https://looroo.net">LooRoo</a> Full-Stack, Lead Developer(2017.6~)</p>
+            <p><a href="https://dalgona.me">Dalgona</a> Full-Stack, Lead Developer(2017.6~) <a href="workindalgona.html">See work</a></p>
             <br />
           </div>
           <div class="col-lg-8 col-lg-offset-2">
@@ -144,7 +158,7 @@
             <p><b>Software Development</b> - is important skill ever!</p>
             <p>Deep dived in <b>C &amp; C++</b></p>
             <p>Mobile develop with <b>C# Xamarin</b></p>
-            <p>Web Development <b>HTML5/CSS/JS, PHP, Python, ASP.NET Core</b></p>
+            <p>Web Development <b>PHP, Python, ASP.NET Core, React, NodeJS</b></p>
             <p>Datebase Development <b>MySQL</b></p>
             <p>Game Development <b>Unity</b></p>
             <br />
