Update job and stack

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <img src="assets/img/baner.png" alt="" class="img-responsive img-rounded">
         </div>
       </div>
-    </div><! --/row -->
+    </div><!--/row -->
     <hr>
     <div class="project row centered">
         <div class="container">
@@ -85,7 +85,7 @@
             </div>
           </div>
         </div>
-      </div><! --/row -->
+      </div><!--/row -->
       <hr>
       <div class="project row centered">
         <div class="container">
@@ -108,7 +108,7 @@
             </div>
           </div>
         </div>
-      </div><! --/row -->
+      </div><!--/row -->
       <hr>
       <div class="project row centered">
         <div class="container">
@@ -122,7 +122,7 @@
               <img src="assets/img/mybitcoin1.png" alt="" class="img-responsive img-rounded center-block">
           </div>
         </div>
-      </div><! --/row -->
+      </div><!--/row -->
       <hr>
       <div class="project row centered">
         <div class="container">
@@ -136,7 +136,7 @@
               <img src="assets/img/comuiz/comuizpage.png" alt="" class="img-responsive img-rounded center-block">
           </div>
         </div>
-      </div><! --/row -->
+      </div><!--/row -->
       <hr>
       <h1>About</h1>
       <div class="project row centered">
@@ -150,16 +150,20 @@
           </div>
           <div class="col-lg-8 col-lg-offset-2">
             <h2>Activities</h2>
-            <p><a href="https://dalgona.me">Dalgona</a> Full-Stack, Lead Developer(2017.6~) <a href="workindalgona.html">See work</a></p>
+            <p><a href="https://dalgona.me">Dalgona</a> Full-Stack, Lead Developer(2017.5~2019.5) <a href="workindalgona.html"><span class="label label-primary">See work</span></a></p>
+            <br />
+          </div>
+          <div class="col-lg-8 col-lg-offset-2">
+            <h2>Jobs</h2>
+            <p><a href="https://marketit.asia/">MarketIt</a> Developer(RN, Web, REST API)(2019.5~)</p>
             <br />
           </div>
           <div class="col-lg-8 col-lg-offset-2">
             <h2>Stack</h2>
             <p><b>Software Development</b> - is important skill ever!</p>
-            <p>Deep dived in <b>C &amp; C++</b></p>
-            <p>Mobile develop with <b>C# Xamarin</b></p>
-            <p>Web Development <b>PHP, Python, ASP.NET Core, React, NodeJS</b></p>
-            <p>Datebase Development <b>MySQL</b></p>
+            <p>Mobile develop with <b>C# Xamarin, React Native, Flutter</b></p>
+            <p>Web Development <b>PHP, NodeJS, Python, ASP.NET Core, React, Vue, Hasura</b></p>
+            <p>Datebase Development <b>MySQL, PostgreSQL, Redis</b></p>
             <p>Game Development <b>Unity</b></p>
             <br />
           </div>
@@ -177,12 +181,12 @@
               <br />
           </div>
         </div>
-      </div><! --/row -->
+      </div><!--/row -->
     <hr>
     <h1>Other Projects</h1>
     <p>Algorithm project (2016.8) - <a href="https://github.com/AntonioMIN/Minesweeper-solve-algorithm">Minesweeper solve algorithm</a></p>
     <br />
-	</div><! --/container -->
+	</div><!--/container -->
 
 	<div id="social">
 		<div class="container">
@@ -190,9 +194,9 @@
 				<div class="col-lg-12">
 					<a href="https://github.com/AntonioMIN"><i class="fa fa-github"></i></a>
 				</div>
-			</div><! --/row -->
-		</div><! --/container -->
-	</div><! --/social -->
+			</div><!--/row -->
+		</div><!--/container -->
+	</div><!--/social -->
 
 	<div id="footerwrap">
 		<div class="container">
@@ -208,7 +212,7 @@
 				</div>
 			</div>
 		</div>
-	</div><! --/footerwrap -->
+	</div><!--/footerwrap -->
 
 
 
