--- a/index.html
+++ b/index.html
@@ -1,234 +1,222 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114342284-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+	<head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=UA-114342284-1"
+		></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag("js", new Date());
 
-      gtag('config', 'UA-114342284-1');
-    </script>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="assets/ico/favicon.ico">
+			gtag("config", "UA-114342284-1");
+		</script>
+		<meta charset="utf-8" />
 
-    <title>Antonio Min</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="description" content="Antonio Min soft developer." />
+		<meta name="author" content="Antonio Min" />
 
-    <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
+		<title>Antonio Min</title>
 
-    <!-- Custom styles for this template -->
-    <link href="assets/css/style.css" rel="stylesheet">
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+		<!-- Compiled and minified CSS -->
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+		/>
+		<link href="assets/css/style.css" rel="stylesheet" />
+		<!--Import Google Icon Font-->
+		<link
+			href="https://fonts.googleapis.com/icon?family=Material+Icons"
+			rel="stylesheet"
+		/>
+	</head>
 
-    <!-- Animate -->
-    <link rel="stylesheet" href="assets/css/animate.css" type="text/css">
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body>
-	<div id="headerwrap">
-	    <div class="container">
-			<div class="row">
-				<div class="col-lg-6 col-lg-offset-3">
-					<h1>SOFTWARE DEVELOPER</h1>
-					<h4>민병윤</h4>
-				</div>
-			</div><!--/row -->
-	    </div> <!-- /container -->
-	</div><!--/headerwrap -->
-
-	<section id="works"></section>
-	<div class="container">
-    <h1>Projects</h1>
-		<div class="project row centered">
-      <div class="container">
-        <div class="col-md-4">
-          <h2>CodeStorage</h2>
-          <p class="lead">어떤 브라우저에서도 간편하게 코드 저장 &amp; 공유를 위한 서비스</p><p>Copy &amp; Paste 또는 파일 업로드로 간편하게 작성한 코드를 업로드할 수 있습니다.</p><p>Personal Key를 통해서 로그인없이 빠르게 개인 저장소에 업로드할 수 있습니다.</p>
-          <a href="http://globalzombie.dothome.co.kr/"><p>Visit</p></a>
-        </div>
-        <div class="col-md-8">
-          <img src="assets/img/baner.png" alt="" class="img-responsive img-rounded">
-        </div>
-      </div>
-    </div><!--/row -->
-    <hr>
-    <div class="project row centered">
-        <div class="container">
-          <div class="col-md-4">
-            <h2>Hoseo Dormitory Menu</h2>
-            <p class="lead">오늘 석식은 뭐지? 밥먹으러 가기전에 간편하게 오늘의 메뉴를 확인할 수 있습니다.</p><p>Xamarin과 웹 크롤링을 이용한 메뉴 어플리케이션입니다. </p>
-            <p>오늘의 식단과 한 주 동안의 식단을 확인할 수 있습니다.</p>
-            <a href='https://play.google.com/store/apps/details?id=com.antoniostudio.hoseodormitorymenu&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
-              <img class="img-responsive" alt='다운로드하기 Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/ko_badge_web_generic.png' />
-            </a>
-          </div>
-          <div class="col-md-8">
-            <div class="row">
-              <div class="col-md-6">
-                  <img src="assets/img/hoseodormitorymenu/screenshot1.png" alt="" class="img-responsive img-rounded center-block">
-              </div>
-              <div class="col-md-6">
-                <img src="assets/img/hoseodormitorymenu/icon.png" alt="" class="img-responsive img-rounded center-block">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div><!--/row -->
-      <hr>
-      <div class="project row centered">
-        <div class="container">
-          <div class="col-md-4">
-            <h2>WorkFlow</h2>
-            <p class="lead">몸은 하나인데 해야할 일은 너무나 많죠? 하나하나 해보는건 어떠세요?</p><p>Xamarin Android를 통해서 만들어진 일정관리 어플리케이션입니다.</p>
-            <p>차례대로, 순서대로 해야할 일을 저장하고 진행하세요.</p>
-            <a href='https://play.google.com/store/apps/details?id=com.antoniomin.workflow&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
-              <img class="img-responsive" alt='다운로드하기 Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/ko_badge_web_generic.png' />
-            </a>
-          </div>
-          <div class="col-md-8">
-            <div class="row">
-              <div class="col-md-6">
-                <img src="assets/img/workflow/dashboard.png" alt="" class="img-responsive img-rounded center-block">
-              </div>
-              <div class="col-md-6">
-                <img src="assets/img/workflow/icon.png" alt="" class="img-responsive img-rounded center-block">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div><!--/row -->
-      <hr>
-      <div class="project row centered">
-        <div class="container">
-          <div class="col-md-4">
-            <h2>My Bitcoin</h2>
-            <p class="lead">요즘 비트코인이 대세라구요?</p><p>Korbit API를 이용한 DB Serverless 웹 서비스 입니다.</p>
-            <p>한개의 페이지에서 원하는 정보를 간편하게 볼 수 있습니다. 또 수익률 계산기도 있습니다.</p>
-            <a href="https://github.com/AntonioMIN/KorbitAPI_WebService" style="font-size:20px;"><i class="fa fa-github"></i> Visit GitHub</a>
-          </div>
-          <div class="col-md-8">
-              <img src="assets/img/mybitcoin1.png" alt="" class="img-responsive img-rounded center-block">
-          </div>
-        </div>
-      </div><!--/row -->
-      <hr>
-      <div class="project row centered">
-        <div class="container">
-          <div class="col-md-4">
-            <h2>Comuiz</h2>
-            <p class="lead">Comunity Quiz</p><p>퀴즈를 만들어 유저들과 즐길수 있는 웹 페이지입니다.</p>
-            <p>OX문제 부터 객관식 문제까지 자유롭게 만들수 있습니다.</p>
-            <a href="https://github.com/AntonioMIN/Comuiz" style="font-size:20px;"><i class="fa fa-github"></i> Visit GitHub</a>
-          </div>
-          <div class="col-md-8">
-              <img src="assets/img/comuiz/comuizpage.png" alt="" class="img-responsive img-rounded center-block">
-          </div>
-        </div>
-      </div><!--/row -->
-      <hr>
-      <h1>About</h1>
-      <div class="project row centered">
-        <div class="container">
-          <div class="col-lg-8 col-lg-offset-2">
-            <h2>Who</h2>
-            <p>Name : 민병윤 (gvvvv1123@gmail.com)</p>
-            <p>Primary position : Back-end Developer</p>
-            <p>상상을 현실로 구현하는 재미. Software development</p>
-            <br />
-          </div>
-          <div class="col-lg-8 col-lg-offset-2">
-            <h2>Activities</h2>
-            <p><a href="https://dalgona.me">Dalgona</a> Full-Stack, Lead Developer(2017.5~2019.5) <a href="workindalgona.html"><span class="label label-primary">See work</span></a></p>
-            <br />
-          </div>
-          <div class="col-lg-8 col-lg-offset-2">
-            <h2>Jobs</h2>
-            <p><a href="https://marketit.asia/">MarketIt</a> Developer(RN, Web, REST API)(2019.5~)</p>
-            <br />
-          </div>
-          <div class="col-lg-8 col-lg-offset-2">
-            <h2>Stack</h2>
-            <p><b>Software Development</b> - is important skill ever!</p>
-            <p>Mobile develop with <b>C# Xamarin, React Native, Flutter</b></p>
-            <p>Web Development <b>PHP, NodeJS, Python, ASP.NET Core, React, Vue, Hasura</b></p>
-            <p>Datebase Development <b>MySQL, PostgreSQL, Redis</b></p>
-            <p>Game Development <b>Unity</b></p>
-            <br />
-          </div>
-          <div class="col-lg-8 col-lg-offset-2">
-            <h2>Awards</h2>
-            <p>한국정보올림피아드 - 경남 금상 - 2016</p>
-            <p>한국정보올림피아드 - 전국 동상 - 2016</p>
-            <p>제 1 회 쿡앱스 게임 제작 공모전 - 금상 - 2017</p>
-            <br />
-          </div>
-          <div class="col-lg-8 col-lg-offset-2">
-              <h2>Education</h2>
-              <p>김해경원고등학교 - 2017 졸업</p>
-              <p>호서대학교 컴퓨터정보공학부 - 2017 입학, 재학</p>
-              <br />
-          </div>
-        </div>
-      </div><!--/row -->
-    <hr>
-    <h1>Other Projects</h1>
-    <p>Algorithm project (2016.8) - <a href="https://github.com/AntonioMIN/Minesweeper-solve-algorithm">Minesweeper solve algorithm</a></p>
-    <br />
-	</div><!--/container -->
-
-	<div id="social">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12">
-					<a href="https://github.com/AntonioMIN"><i class="fa fa-github"></i></a>
-				</div>
-			</div><!--/row -->
-		</div><!--/container -->
-	</div><!--/social -->
-
-	<div id="footerwrap">
-		<div class="container">
-			<div class="row centered">
-				<div class="col-lg-4">
-					<p><b>SOFTWARE DEVELOPER</b></p>
-				</div>
-				<div class="col-lg-4">
-					<p>Just start.</p>
-				</div>
-				<div class="col-lg-4">
-					<p>gvvvv1123@gmail.com</p>
-				</div>
+	<body>
+		<div id="hero">
+			<div style="flex: 1;">
+				<h1>SOFTWARE DEVELOPER</h1>
+				<h4>민병윤</h4>
 			</div>
 		</div>
-	</div><!--/footerwrap -->
+		<div class="container">
+			<div class="row">
+				<div class="col s12 m6">
+					<div class="card">
+						<div class="card-image">
+							<img
+								src="assets/img/hoseodormitorymenu/screenshot1.png"
+							/>
+						</div>
+						<div class="card-content">
+							<span class="card-title grey-text text-darken-4"
+								>Hoseo Dormitory Menu</span
+							>
+							<p>
+								오늘 석식은 뭐지? 밥먹으러 가기전에 간편하게
+								오늘의 메뉴를 확인할 수 있습니다.<br />
+								Xamarin과 웹 크롤링을 이용한 메뉴
+								어플리케이션입니다.<br />
+								오늘의 식단과 한 주 동안의 식단을 확인할 수
+								있습니다.
+							</p>
+						</div>
+						<div class="card-action">
+							<a
+								href="https://play.google.com/store/apps/details?id=com.antoniostudio.hoseodormitorymenu&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1"
+								>스토어에서 보기
+								<i class="material-icons">shop</i></a
+							>
+						</div>
+					</div>
+				</div>
+				<div class="col s12 m6">
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/img/workflow/dashboard.png" />
+						</div>
+						<div class="card-content">
+							<span class="card-title grey-text text-darken-4"
+								>WorkFlow</span
+							>
+							<p>
+								몸은 하나인데 해야할 일은 너무나 많죠? 하나하나
+								해보는건 어떠세요?
+								<br />
+								Xamarin Android를 통해서 만들어진 일정관리
+								어플리케이션입니다.
+								<br />
+								차례대로, 순서대로 해야할 일을 저장하고
+								진행하세요.
+							</p>
+						</div>
+						<div class="card-action">
+							<a
+								href="https://play.google.com/store/apps/details?id=com.antoniomin.workflow&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1"
+								>스토어에서 보기
+								<i class="material-icons">shop</i></a
+							>
+						</div>
+					</div>
+				</div>
+				<div class="col s12 m6">
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/img/mybitcoin1.png" />
+						</div>
+						<div class="card-content">
+							<span class="card-title grey-text text-darken-4"
+								>My Bitcoin</span
+							>
+							<p>
+								Korbit API를 이용한 DB Serverless 웹 서비스
+								입니다.
+								<br />
+								한개의 페이지에서 원하는 정보를 간편하게 볼 수
+								있습니다. 또 수익률 계산기도 있습니다.
+							</p>
+						</div>
+						<div class="card-action">
+							<a
+								href="https://github.com/AntonioMIN/KorbitAPI_WebService"
+								>GitHub에서 보기
+								<i class="material-icons">code</i></a
+							>
+						</div>
+					</div>
+				</div>
+				<div class="col s12 m6">
+					<div class="card">
+						<div class="card-image">
+							<img src="assets/img/comuiz/comuizpage.png" />
+						</div>
+						<div class="card-content">
+							<span class="card-title grey-text text-darken-4"
+								>Comuiz</span
+							>
+							<p>
+								퀴즈를 만들어 유저들과 즐길수 있는 웹
+								페이지입니다.
+								<br />
+								OX문제 부터 객관식 문제까지 자유롭게 만들수
+								있습니다.
+							</p>
+						</div>
+						<div class="card-action">
+							<a href="https://github.com/AntonioMIN/Comuiz"
+								>GitHub에서 보기
+								<i class="material-icons">code</i></a
+							>
+						</div>
+					</div>
+				</div>
+			</div>
 
+			<hr />
+			<h4>About</h4>
+			<h5>Who</h5>
+			<p>Name : 민병윤 (gvvvv1123@gmail.com)</p>
+			<p>Primary position : Back-end Developer</p>
+			<p>
+				상상을 현실로 구현하는 재미. Software development
+			</p>
+			<br />
+			<h5>Activities</h5>
+			<p>
+				<a href="https://dalgona.me">Dalgona</a>
+				Full-Stack, Lead Developer(2017.5~2019.5)
+				<a href="workindalgona.html"
+					><span class="label label-primary">See work</span></a
+				>
+			</p>
+			<h5>Jobs</h5>
+			<p>
+				<a href="https://marketit.asia/">MarketIt</a>
+				Developer(RN, Web, REST API)(2019.5~)
+			</p>
+			<br />
+			<h5>Stack</h5>
+			<p><b>Software Development</b> - is important skill ever!</p>
+			<p>
+				Mobile develop with
+				<b>C# Xamarin, React Native, Flutter</b>
+			</p>
+			<p>
+				Web Development
+				<b>PHP, NodeJS, Python, ASP.NET Core, React, Vue, Hasura</b>
+			</p>
+			<p>
+				Datebase Development
+				<b>MySQL, PostgreSQL, Redis</b>
+			</p>
+			<p>Game Development <b>Unity</b></p>
+			<br />
+			<h5>Awards</h5>
+			<p>한국정보올림피아드 - 경남 금상 - 2016</p>
+			<p>한국정보올림피아드 - 전국 동상 - 2016</p>
+			<p>제 1 회 쿡앱스 게임 제작 공모전 - 금상 - 2017</p>
+			<br />
+			<h5>Education</h5>
+			<p>김해경원고등학교 - 2017 졸업</p>
+			<p>호서대학교 컴퓨터정보공학부 - 2017 입학, 재학</p>
+			<br />
+			<!--/row -->
+			<hr />
+			<h5>Other Projects</h5>
+			<p>
+				Algorithm project (2016.8) -
+				<a
+					href="https://github.com/AntonioMIN/Minesweeper-solve-algorithm"
+					>Minesweeper solve algorithm</a
+				>
+			</p>
+			<br />
 
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/viewportchecker.js"></script>
-    <script>
-      jQuery(document).ready(function() {
-        jQuery('.project').addClass("ani_hidden").viewportChecker({
-            classToAdd: 'ani_visible animated fadeIn',
-            offset: 100    
-          });
-      });
-    </script>
-  </body>
+		<!-- Compiled and minified JavaScript -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+	</body>
 </html>
